minor fixes and file rename